# chatgpt-schemas

./: README.md  pyproject.toml
src/: __init__.py
