[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt_schemas"
version = "0.0.1"
authors = [
  { name="David Waster", email="wasterdavid@gmail.com" },
]
description = "Some schemas or types for ChatGPT API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/David256/chatgpt-schemas"
"Bug Tracker" = "https://github.com/David256/chatgpt-schemas/issues"